@@ -136,12 +136,7 @@ __Z4coreP8DOMRange
 __ZN3JSC8Bindings8Instance16newRuntimeObjectEPNS_9ExecStateE
 __ZN7WebCore10MouseEventC1ERKNS_12AtomicStringEbbN3WTF10PassRefPtrINS_9DOMWindowEEEiiiiibbbbtNS5_INS_11EventTargetEEENS5_INS_9ClipboardEEEb
 __ZN7WebCore10ScrollView20setCanHaveScrollbarsEb
-__ZN7WebCore10StringImpl11reverseFindEPS0_ib
 __ZN7WebCore10StringImpl14createCFStringEv
-__ZN7WebCore10StringImpl19createUninitializedEjRPt
-__ZN7WebCore10StringImpl7replaceEtt
-__ZN7WebCore10StringImpl8endsWithEPS0_b
-__ZN7WebCore10StringImplD1Ev
 __ZN7WebCore10StringImplcvP8NSStringEv
 __ZN7WebCore10handCursorEv
 __ZN7WebCore10setCookiesEPNS_8DocumentERKNS_4KURLERKNS_6StringE
@@ -207,8 +202,6 @@ __ZN7WebCore11IconFetcher6createEPNS_5FrameEPNS_17IconFetcherClientE
 __ZN7WebCore11RenderLayer19scrollRectToVisibleERKNS_7IntRectEbRKNS_15ScrollAlignmentES6_
 __ZN7WebCore11globalPointERK8_NSPointP8NSWindow
 __ZN7WebCore11toUserSpaceERK7_NSRectP8NSWindow
-__ZN7WebCore12AtomicString3addEPKc
-__ZN7WebCore12AtomicString3addEPNS_10StringImplE
 __ZN7WebCore12ChromeClient20paintCustomScrollbarEPNS_15GraphicsContextERKNS_9FloatRectENS_20ScrollbarControlSizeEjNS_13ScrollbarPartEbffj
 __ZN7WebCore12ChromeClient23paintCustomScrollCornerEPNS_15GraphicsContextERKNS_9FloatRectE
 __ZN7WebCore12EventHandler10mouseMovedEP7NSEvent
@@ -415,7 +408,6 @@ __ZN7WebCore17DOMImplementation14isTextMIMETypeERKNS_6StringE
 __ZN7WebCore17GlyphPageTreeNode18treeGlyphPageCountEv
 __ZN7WebCore17HTMLPlugInElement11getNPObjectEv
 __ZN7WebCore17HistoryController26saveDocumentAndScrollStateEv
-__ZN7WebCore17equalIgnoringCaseEPNS_10StringImplES1_
 __ZN7WebCore18deprecatedParseURLERKNS_6StringE
 __ZN7WebCore18isStartOfParagraphERKNS_15VisiblePositionE
 __ZN7WebCore19AnimationController16resumeAnimationsEPNS_8DocumentE
@@ -566,8 +558,6 @@ __ZN7WebCore5Range6setEndEN3WTF10PassRefPtrINS_4NodeEEEiRi
 __ZN7WebCore5Range8setStartEN3WTF10PassRefPtrINS_4NodeEEEiRi
 __ZN7WebCore5RangeD1Ev
 __ZN7WebCore5cacheEv
-__ZN7WebCore5equalEPNS_10StringImplEPKc
-__ZN7WebCore5equalEPNS_10StringImplES1_
 __ZN7WebCore6Editor10applyStyleEPNS_19CSSStyleDeclarationENS_10EditActionE
 __ZN7WebCore6Editor10insertTextERKNS_6StringEPNS_5EventE
 __ZN7WebCore6Editor13canDHTMLPasteEv
@@ -607,16 +597,8 @@ __ZN7WebCore6Editor7commandERKNS_6StringENS_19EditorCommandSourceE
 __ZN7WebCore6Editor7copyURLERKNS_4KURLERKNS_6StringE
 __ZN7WebCore6Editor7outdentEv
 __ZN7WebCore6Loader20servePendingRequestsENS0_8PriorityE
-__ZN7WebCore6String6appendERKS0_
-__ZN7WebCore6String6appendEc
-__ZN7WebCore6String6formatEPKcz
-__ZN7WebCore6String6numberEi
-__ZN7WebCore6String6numberEl
-__ZN7WebCore6String8fromUTF8EPKcm
 __ZN7WebCore6StringC1EP8NSString
 __ZN7WebCore6StringC1EPK10__CFString
-__ZN7WebCore6StringC1EPKc
-__ZN7WebCore6StringC1EPKcj
 __ZN7WebCore6Widget12setFrameRectERKNS_7IntRectE
 __ZN7WebCore6Widget16removeFromParentEv
 __ZN7WebCore6Widget20retainPlatformWidgetEv
@@ -799,10 +781,7 @@ __ZN7WebCore9TimerBaseD2Ev
 __ZN7WebCore9fontCacheEv
 __ZN7WebCore9makeRangeERKNS_15VisiblePositionES2_
 __ZN7WebCore9pageCacheEv
-__ZN7WebCoreeqERKNS_12AtomicStringEPKc
 __ZN7WebCoreeqERKNS_19ResourceRequestBaseES2_
-__ZN7WebCoreplEPKcRKNS_6StringE
-__ZN7WebCoreplERKNS_6StringES2_
 __ZNK3JSC8Bindings10RootObject12globalObjectEv
 __ZNK7WebCore10FloatPointcv8_NSPointEv
 __ZNK7WebCore10PluginData16supportsMimeTypeERKNS_6StringE
@@ -988,12 +967,7 @@ __ZNK7WebCore6Editor7canCopyEv
 __ZNK7WebCore6Editor7canEditEv
 __ZNK7WebCore6Editor8canPasteEv
 __ZNK7WebCore6Editor9canDeleteEv
-__ZNK7WebCore6String10charactersEv
 __ZNK7WebCore6String14createCFStringEv
-__ZNK7WebCore6String4utf8Ev
-__ZNK7WebCore6String6lengthEv
-__ZNK7WebCore6String7isEmptyEv
-__ZNK7WebCore6String9substringEjj
 __ZNK7WebCore6Widget23convertToContainingViewERKNS_7IntRectE
 __ZNK7WebCore6Widget23convertToContainingViewERKNS_8IntPointE
 __ZNK7WebCore6Widget25convertFromContainingViewERKNS_7IntRectE
