@@ -1,3 +1,12 @@
+2010-04-20  Gavin Barraclough  <barraclough@apple.com>
+
+        Reviewed by NOBODY (build fix).
+        Speculative tiger build fix.
+
+        * WebCore.NPAPI.exp:
+        * WebCore.PluginHostProcess.exp:
+        * WebCore.base.exp:
+
 2010-04-20  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
